--- a/style.css
+++ b/style.css
@@ -243,10 +243,67 @@ padding: 20px 0 0 20px;
 
 /* recent news section end*/
 
+/* Donate section start */
+.Donate{
+    width: 100%;
+    height: 464px;
+    margin: 40px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.Donate h1{
+    font-size: 40px;
+    font-weight: bold;
+    color: #0E0E0E;
+}
+.Donate p{
+    font-size: 16px;
+    color: rgba(14, 14, 14, 0.7);
+    text-align: center;
+}
+
+.amount-container{
+    width: 1071px;
+    height: 128px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
+}
+.amount-container div{
+    width: 240px;
+    height: 120px;
+    background-color: #FFFFFF;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    border-radius:16px;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+}
+.amount-container div h2{
+    font-size: 40px;
+    color: rgba(14, 14, 14, 0.8);
+}
+.Donate input{
+    width: 1000px;
+    height: 64px;
+    text-align: center;
+    font-size: 20px;
+    color: rgba(14, 14, 14, 0.3);
+    border: none;
+    border-bottom: 1px solid rgba(14, 14, 14, 0.15);
+}
+.amount-container div:hover{
+    background-color: #C6E4D6;
+}
 
 
 
 
+/* Donate section end */
 
 
 
