--- a/style.css
+++ b/style.css
@@ -305,7 +305,87 @@ padding: 20px 0 0 20px;
 
 /* Donate section end */
 
+/* Newsletter Section style start*/
 
+.Newsletter-Section{
+    width: 100%;
+    height: 395px;
+    background-color: #C6E4D6;
+    border-radius: 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
+.Newsletter-Section h1{
+    font-size: 40px;
+    font-weight: bold;
+    color: #0E0E0E;
+    text-align: center;
+}
+.Newsletter-Section p{
+    font-size: 16px;
+    color: rgba(14, 14, 14, 0.7);
+    text-align: center;
+    line-height: 24px;
+}
+.Newsletter-Section form{
+    width: 750px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
 
-
+.Newsletter-Section form input{
+    width: 600px;
+    height: 53px;
+    padding-left: 20px;
+    border: none;
+    font-size: 16px;
+    color: rgba(14, 14, 14, 0.3);
+    border-radius:8px 0 0 8px ;
+    
+}
+.Newsletter-Section form button{
+    width: 140px;
+    height: 53px;
+    font-size: 18px;
+    font-weight: 600;
+    background-color: #006A50;
+    color: #FFFFFF;
+    border: none;
+   border-radius: 0 8px 8px 0;
+}
+/* Newsletter Section style end*/
 /* main style end */
+
+/* footer section style start */
+.contact-link{
+    width: 100%;
+    height: 220px;
+    margin: 30px 0;
+    background-color: #FFFFFF;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.contact-link h1{
+    font-size: 32px;
+    font-weight: bold;
+}
+.contact-link hr{
+    width:1122px ;
+   
+}
+.contact-link div img{
+    margin-left: 19px;
+}
+
+
+
+/* footer section style start */
